# capturist

./: .gitignore  .prettierignore  .prettierrc.yml  CONTRIBUTING.md  LICENSE  README.md  angular.json  eslint.config.js  me.ariyadey.capturist.metainfo.xml  me.ariyadey.capturist.yml  package-lock.json  package.json  pnpm-lock.yaml  snapcraft.yaml  tsconfig.json
.gemini/: README.md  config.yaml
.github/: dependabot.yml  release.yml
.github/workflows/: bump.yml  ci-cd.yml  release.yml  snap.yml
distribution/flatpak/: me.ariyadey.capturist.yml
scripts/: bump-version.mjs
src/: _colors.scss  _fonts.scss  _tailwind.css  _theme-colors.scss  index.html  main.ts  styles.scss
src-tauri/: .editorconfig  Capturist.desktop  Cargo.toml  build.rs  tauri.conf.json  tauri.snap.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/desktop/: autostart.rs  cli.rs  mod.rs  shortcut.rs  tray.rs  update.rs  window.rs
src-tauri/src/ipc/: commands.rs  deeplink.rs  events.rs  mod.rs
src-tauri/src/shared/: environment.rs  error.rs  metadata.rs  mod.rs  state.rs
src-tauri/src/shared/storage/: general.rs  key.rs  keyring.rs  mod.rs  secure.rs  settings.rs
src/app/: app.config.ts  app.path.ts  app.routes.ts  app.spec.ts  app.ts
src/app/landing-page/: landing-page.html  landing-page.scss  landing-page.spec.ts  landing-page.ts
src/app/quick-add/: quick-add-container.spec.ts  quick-add-container.ts  quick-add-dialog.html  quick-add-dialog.scss  quick-add-dialog.spec.ts  quick-add-dialog.ts
src/app/shared/ipc/: app-event.ts  app-log.ts  app-window-label.ts  ipc-event.ts  ipc-log.ts  native-notification.ts  window-label.ts
src/app/shared/theme/: icon-service.spec.ts  icon-service.ts
