# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "capturist"
version = "0.3.3"
description = "A practical desktop application for quickly adding tasks to Todoist"
authors = ["Ariya Moheb <ariya.mms@gmail.com>"]
repository = "https://github.com/ariyadey/capturist"
license = "MIT"
publish = false
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "capturist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = false # Ensures debug symbols are preserved to make the updater plugin work.

[build-dependencies]
dotenv = "0.15"
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow = "1.0"
keyring = { version = "3.6", features = ["sync-secret-service", "windows-native", "apple-native"] }
log = "0.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = { version = "2.5", features = ["serde"] }

tauri = { version = "2.9", features = ["config-json5", "tray-icon"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-log = { version = "2.7", features = ["colored"] }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-cli = "2.4"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-single-instance = { version = "2.3", features = ["deep-link"] }
tauri-plugin-updater = "2.9"
